# hubble-django-gdpr-manager

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  tests_makemigrations.py
.devcontainer/: devcontainer.json
django_gdpr_manager/: __init__.py  apps.py  helpers.py
gdpr_manager/: admin.py  handlers.py  helpers.py  models.py  registry.py  settings.py
gdpr_manager/migrations/: 0001_initial.py  0002_gdprtestmodel.py  0003_delete_gdprtestmodel.py
gdpr_manager/templates/gdpr_manager/admin/: gm_change_list.html
gdpr_manager/tests/: test_simple.py
tests/: README.md  __init__.py  apps.py  helpers.py  models.py  test_models.py  test_registry.py  test_settings.py  test_simple.py
tests/migrations/: 0001_initial.py  0002_modelwithshowwarningiffoundfalse_and_more.py
tests/test_app/: models.py
tests/test_handlers/: test_check_search_types.py  test_register_gdpr_model.py
