[project]
name = "django_gdpr_manager"
version =" 0.0.1"
authors = [
    { name="Hubble", email="developers@hubblehq.com" }
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "django>4.2",
]
[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'


